# RibbonWidget

./: .gitignore  CMakeLists.txt  CMakeSettings.json  QtLocator.cmake  RibbonWidget.cmake  build.bat  dependencies.cmake  ribbonWidget.cmake  utility.cmake
Examples/: CMakeLists.txt  ExampleMaster.cmake
Examples/RibbonWidgetSandbox/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  RibbonImpl.cpp  RibbonImpl.h  main.cpp
cmake/: ExampleMaster.cmake  QtLocator.cmake  dependencies.cmake  utility.cmake
core/: CMakeLists.txt
core/inc/: RW_base.h  RW_debug.h  RW_global.h  RibbonWidget.h  RibbonWidget_base.h  RibbonWidget_debug.h  RibbonWidget_global.h  RibbonWidget_info.h
core/inc/Buttons/: Buttons.h  InformativeToolButton.h  LoadingBarToolButton.h
core/inc/RibbonStructure/: Ribbon.h  RibbonButton.h  RibbonButtonGroup.h  RibbonTab.h
core/inc/Utilities/: DefaultIconLoader.h  LoadingCircle.h  ProgressBar.h  Utilities.h
core/resources/: RibbonIcons.qrc
core/src/: RibbonWidget_debug.cpp  RibbonWidget_info.cpp
core/src/Buttons/: InformativeToolButton.cpp
core/src/RibbonStructure/: Ribbon.cpp  RibbonButton.cpp  RibbonButtonGroup.cpp  RibbonTab.cpp
core/src/Utilities/: DefaultIconLoader.cpp  LoadingCircle.cpp  ProgressBar.cpp
core/ui/: RibbonButtonGroup.ui  RibbonTab.ui
dependencies/: easy_profiler.cmake
unitTests/: CMakeLists.txt
unitTests/UnitTest1/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  RibbonImpl.cpp  RibbonImpl.h  main.cpp
unitTests/UnitTest1/tests/: TST_simple.h
